Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5148

[CI] [C++] LLVM-related compile errors

    XMLWordPrintableJSON

Details

    Description

      Travis-CI builds using llvm.org-originated binary packages have started failing:

      [ 76%] Linking CXX executable ../../debug/gandiva-engine_llvm_test
      ../../debug/libgandiva.so.14.0.0: undefined reference to `typeinfo for llvm::ErrorInfoBase'
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      

      Apparently this is because LLVM was compiled with RTTI turned off. See example report here:
      https://github.com/EOSIO/eos/issues/498

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m