ARROW-5148: [Gandiva] Allow linking with RTTI-disabled LLVM builds

This should fix Travis-CI failures with binaries from apt.llvm.org.

Author: Antoine Pitrou <antoine@python.org>

Closes #4135 from pitrou/ARROW-5148-llvm-rtti-fix and squashes the following commits:

0d4206e94 <Antoine Pitrou> ARROW-5148:  Allow linking with RTTI-disabled LLVM builds